# sgr-cbc

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  PLAN_TRABAJO_CONTINUAR.md  README.md  RUNBOOK.md  env.example.txt  lint_output.txt  lint_output_utf8.txt  mcp_config.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
docs/: ANALISIS_GAPS_Y_PLAN_IMPLEMENTACION.md  CONFIGURACION_FASE_PRUEBAS.md  GAPS_PENDIENTES_PLAN_IMPLEMENTACION.md  GUIA_CONFIGURACION.md  GUIA_RESPALDOS_BD.md  MANUAL_USUARIO.md  PLAN-UX-IMPROVEMENTS.md  PLAN_CONFIGURACION_MVP.md  PLAN_PRUEBAS_INTEGRALES.md  Propuesta Sgr Cbc V0 2.md  Propuesta_SGR_CBC_V0.3_Estado_Implementacion.md  Propuesta_SGR_CBC_V0.4_Estado_Implementacion.md  SGR-CBC Code Review 2.md  SGR-CBC Code Review.md  TAREAS_PARA_AGENTES.md  UX_MEJORAS_POR_ROL.md
fortis_bot_export/: .gitignore  main.py  pyproject.toml
fortis_bot_export/src/alerts/: telegram.py
fortis_bot_export/src/analysis/: convergences.py  divergences.py  multiframe.py
fortis_bot_export/src/backtesting/: engine.py
fortis_bot_export/src/core/: models.py  structures.py
fortis_bot_export/src/data/: binance_client.py  supabase_client.py
fortis_bot_export/src/risk/: manager.py
fortis_bot_export/src/signals/: generator.py
fortis_bot_export/src/stages/: stage1.py  stage2.py
fortis_bot_export/src/triggers/: continuation.py  reversal.py
fortis_bot_export/tests/: test_risk.py  test_structures.py  test_triggers.py
scripts/: backup-database.sh  generate-templates.js  restore-database.sh  run-tests.sh  (+1 more)
src/lib/: env.ts  (+1 more)
(+158 files in other folders)
